[tool.poetry]
name = "hover-dns-updater"
version = "0.1.0"
description = "Update DNS entry on hover.com"
authors = ["Mark Silva <github3@markesilva.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "hover_dns_updater"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pyopenssl = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pep8-naming = "^0.13.3"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
