[tool.poetry]
name = "hover-dns-updater"
version = "0.1.0"
description = "Update DNS entry on hover.com"
authors = ["Mark Silva <github3@markesilva.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pyopenssl = "^23.2.0"
pyotp = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pep8-naming = "^0.13.3"
flake8 = "^6.0.0"
black = "^23.3.0"
sphinx = "^7.0.1"

[tool.pytest.ini_options]
addopts = "--cov-report term --cov-report xml --verbose --doctest-modules"
testpaths = ["hover-dns-updater.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
